Add demo version
1. Cut the number of items in the demo version
Add a 'download full version' item in the end
2. Change icon
3. Change app into demo/full flavor, able to manage two versions
together

--- a/ProjEric1Lite-Info.plist
+++ b/ProjEric1Lite-Info.plist
@@ -52,7 +52,7 @@
 	<key>FacebookAppID</key>
 	<string>1051479971583650</string>
 	<key>FacebookDisplayName</key>
-	<string>Project Eric</string>
+	<string>Project Eric Lite</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>fbapi</string>
